--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,10 @@
 *.bak
 *.swp
 *.pyc
-VO_ws/devel/*
-VO_ws/build/*
+VO_ws/devel/
+VO_ws/build/
+exp2_ws/build/
+exp2_ws/devel/
 devel/
 build/
 CMakeLists.txt.user
